# ludo_cpp

./: .clang-format  .gitignore  CMakeLists.txt  SConstruct  compile_commands.json  init.el  myinit.org  run.sh
includes/: BoardDisplay.h  Common.h  GData.h  GameDisplay.h  GameEngine.h  GameManager.h  LudoEngine.h  PPiece.h  Player.h
ludo_cpp/: mono_crash.0.0.json  project.godot
ludo_cpp/assets/: DebugTheme.tres
ludo_cpp/assets/PlayerIcons/: P1.png.import  P2.png.import  asd.png.import  p4.png.import
ludo_cpp/scenes/: BoardDisplay.tscn  GameDisplay.tscn  GameEngine.tscn  GameManager.tscn  PPiece.tscn  Player.tscn  Square.tscn
ludo_cpp/scenes/scripts/: BoardDisplay.gdns  GameDisplay.gdns  GameEngine.gdns  GameManager.gdns  HUD.gdns  PPiece.gdns  Player.gdns  Square.gd  Square.gdns
src/: .#Player.cpp  BoardDisplay.cpp  GameDisplay.cpp  GameEngine.cpp  GameManager.cpp  GdRegClass.cpp  LudoEngine.cpp  PPiece.cpp  Player.cpp  init.el  myinit.org
src/engine/: CMakeLists.txt  compile_commands.json  run.sh
src/engine/RanLib/: CMakeLists.txt  ran.cpp  run.sh
src/engine/includes/: CoreE.h  DebugE.h  DeclarationsE.h  EngineE.h  GData.h  ran.h
src/engine/src/: CoreE.cpp  DebugE.cpp  DeclarationsE.cpp  EngineE.cpp
